# agendou_api

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yaml  pyproject.toml
alembic/: env.py
alembic/versions/: 001_create_users_table.py  002_drop_legacy_users_for_saas.py  003_saas_enums.py  004_tenant_core.py  005_users_customers_staff.py  006_catalog_coupons.py  007_schedule_resources.py  008_appointments.py  009_payments.py  010_reviews_notifications_misc.py
src/agendou_api/: main.py
src/agendou_api/companies/application/commands/: create_unit_use_case.py  get_company_settings_use_case.py  get_company_use_case.py  get_unit_use_case.py  list_companies_use_case.py  list_units_use_case.py  onboard_company_use_case.py  update_company_settings_use_case.py  update_company_use_case.py  update_unit_use_case.py
src/agendou_api/companies/application/ports/: __init__.py  company_repository.py  company_settings_repository.py  unit_repository.py
src/agendou_api/companies/domain/: __init__.py  company.py  company_settings.py  enums.py  unit.py
src/agendou_api/companies/infrastructure/http/: dependencies.py
src/agendou_api/config/: settings.py
src/agendou_api/shared/infrastructure/database/: __init__.py  session.py
src/agendou_api/shared/infrastructure/http/: tenant_access.py
src/agendou_api/shared/infrastructure/security/: bcrypt_password_hasher.py  pyjwt_token_provider.py
src/agendou_api/users/application/commands/: authenticate_user_use_case.py  create_user_use_case.py  register_user_use_case.py  request_password_reset_use_case.py  reset_password_use_case.py  update_profile_use_case.py
src/agendou_api/users/application/ports/: __init__.py  email_sender.py  (+3 more)
src/agendou_api/users/domain/: __init__.py  enums.py  user.py
(+29 files in other folders)
