[project]
name = "agendou-api"
version = "0.1.0"
description = ""
authors = [
    {name = "carloscabral656",email = "edu.carlos.cec@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.135.3,<0.136.0)",
    "uvicorn (>=0.43.0,<0.44.0)"
]

[tool.poetry.scripts]
start = "agendou_api.main:run"

[tool.poetry]
packages = [{include = "agendou_api", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
